# ansible-role-updates

./: .pre-commit-config.yaml  .travis.yml  .yamllint.yml  README.md  pyproject.toml  requirements.yml  tasks.yml  tox.ini
.github/workflows/: molecule.yml
defaults/main/: apt.yml  dnf.yml  main.yml  yum.yml
handlers/: main.yml
meta/: main.yml  requirements.yml
molecule/all/: molecule.yml
molecule/default/: molecule.yml
molecule/kvm/: molecule.yml  prepare.yml
molecule/podman/: molecule.yml
molecule/resources/playbooks/: converge.yml  prepare.yml  vars.yml  verify.yml
molecule/resources/tests/: test_default.py  test_updates.py
molecule/shared/: playbook.yml  prepare.yml  yamllint.yml
molecule/tests/: test_updates.py
molecule/tox/: molecule.yml
molecule/vbox/: molecule.yml  prepare.yml
tasks/: main.yml  tasks.yml
templates/etc/apt/apt.conf.d/: 20auto-upgrades.j2  50unattended-upgrades.j2
templates/etc/dnf/: automatic.conf.j2
templates/etc/yum/: yum-cron.conf.j2
vars/: Amazon.yml  Ubuntu.yml  apt.yml  dnf.yml  yum.yml
